samples/_failures_safe/1761446093_dad430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7d86162.c: In function ‘main’:
./samples/SAFE/__tmp_a7d86162.c:152:5: error: expected declaration or statement at end of input
  152 |     breadth_first_search(&graph, start_node);
      |     ^~~~~~~~~~~~~~~~~~~~
